2007-10-30  Adam Schreiber  <sadam@clemson.edu>
    
    * libseahorse/seahorse-keyserver-control.c:
    * libseahorse/seahorse-keyserver-control.h: Clean up 
    keyserver-control.  Patch from Christian Persch.  
    Fixes bug #478454

2007-10-29  Adam Schreiber  <sadam@clemson.edu>

    * data/seahorse.schemas.in: Disabled automatic key uploading 
    retrieval by default.  Fixes bug #484159
    * libseahorse/seahorse-prefs.c:
    * libseahorse/seahorse-prefs.glade: Add mnemonics and fix HIG 
    issues.  Patch from Christian Persch.  Fixes bug #478451
    * libseahorse/seahorse-progress.glade: Don't translate dummy text.
    Patch from Christian Persch.  Fixes bug #478462
    * src/seahorse-expires.glade: Fix capitalization and add mnemonic.
    Patch from Christian Persch.  Fixes bug #478474
    * src/seahorse-gkeyring-item-properties.glade: Bring into HIG
    compliance.  Patch from Christian Persch.  Fixes bug #478477

2007-10-15  Stef Walter  <stef@memberwebs.com>

	* configure.in: Bump version number

=== seahorse-2.20.1 ===

2007-10-15  Stef Walter  <stef@memberwebs.com>

	* README:
	* NEWS: 
	* configure.in: Release version 2.20.1

2007-09-19  Adam Schreiber  <sadam@clemson.edu>

    * libseahorse/seahorse-combo-keys.c: Fix pointer usage. Patch from 
    Michael Wolf
    * libseahorse/seahorse-ssh-operation.c: Fix assertions.  Patch from 
    Michael Wolf
    * plugins/nautilus/seahorse-tool-files.c: Fix selection of package 
    name. Patch from Michael Wolf
    * src/seahorse-pgp-generate.c: Fix error text.  Patch from Michael Wolf
    * configure.in: Fix Gedit compilation on 2.20. Patch from Gotz Waschk. 
    Fixes bug #478350
    * plugins/nautilus/seahorse-tool-progress.c: Fix compilation warning.

2007-09-19  Stef Walter  <stef@memberwebs.com>

	* configure.in: Release with proper version number 2.20.0

=== seahorse-2.20 ===

2007-09-17  Stef Walter  <stef@memberwebs.com>

	* README:
	* NEWS: 
	* configure.in: Release version 2.20 
