@@ -1,3 +1,8 @@
+2007-10-31  Adam Schreiber  <sadam@clemson.edu>
+
+    * src/seahorse-revoke.c: Fix incomplete conversion from GtkOptionMenu 
+    to GtkComboBox.  Fixes bug #475757
+
 2007-10-30  Adam Schreiber  <sadam@clemson.edu>
     
     * libseahorse/seahorse-keyserver-control.c:
